--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "private": true,
   "devDependencies": {},
   "dependencies": {
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "ioredis": "^2.5.0",
+    "morgan": "^1.8.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-scripts": "^0.9.3",
     "redux": "^3.6.0",
-    "serve": "^4.0.1"
+    "uuid": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "yarn build",
+    "serve": "node server"
   }
 }
