--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {},
   "dependencies": {
+    "axios": "^0.15.3",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "ioredis": "^2.5.0",
@@ -12,6 +13,7 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
     "react-scripts": "^0.9.3",
     "redux": "^3.6.0",
     "uuid": "^3.0.1"
